--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -35,7 +35,9 @@ main {
 .search {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  position: sticky;
+  top: 0px;
+  background: white;
 }
 
 .search-bar {
@@ -121,14 +123,6 @@ details > summary::-webkit-details-marker { display: none; }
   margin-right: 10px;
 }
 
-a, a:visited {
-  color: $neutral-color;
-}
-
-a:hover {
-  color: $bright-color;
-}
-
 .match {
   background-color: $bright-color;
   color: white;
@@ -188,4 +182,52 @@ hr {
   border: 1px solid $bright-color;
   border-radius: 3px;
   padding: 5px;
+}
+
+.controls {
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.controls button {
+  border-radius: 3px;
+  border: 1px solid transparent;
+  font-size: 0.8rem;
+  display: inline;
+  padding: 5px;
+  background: none;
+  color: $neutral-color;
+  text-decoration: underline;
+}
+
+.controls a, .controls a:visited {
+  border-radius: 3px;
+  border: 1px solid transparent;
+  color: $neutral-color;
+  padding: 2px;
+}
+
+.controls a:hover {
+  color: $bright-color;
+}
+
+.controls a:focus, .controls button:focus {
+  outline: inherit;
+  border: 1px dotted $neutral-color;
+}
+
+.controls button:hover {
+  color: white;
+  background: #333;
+  border: 1px solid $separator-color;
+  text-decoration: none;
+}
+
+.controls button:active {
+  color: white;
+  background: $bright-color;
+  border: 1px solid $separator-color;
+  text-decoration: none;
 }
