Fix input field in Safari

--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -120,8 +120,8 @@ details > summary::-webkit-details-marker { display: none; }
 
 #glass {
   width: 1em;
-  height: auto;
-  margin-right: 10px;
+  height: 1em;
+  margin: auto 10px auto 0;
 }
 
 .match {
